--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -1431,7 +1431,7 @@ if test "x$GCC" = xyes ; then
     AC_MSG_CHECKING([if $CC supports -Werror=attributes])
     save_CFLAGS="$CFLAGS"
     CFLAGS="$CFLAGS $STRICT_CFLAGS -Werror=attributes"
-    AC_COMPILE_IFELSE([AC_LANG_SOURCE([return 0;])],
+    AC_COMPILE_IFELSE([AC_LANG_SOURCE([int i;])],
 		      [STRICT_CFLAGS="$STRICT_CFLAGS -Werror=attributes"
 		       AC_MSG_RESULT([yes])],
 		      [AC_MSG_RESULT([no])])
