--- a/xorg-macros.m4.in
+++ b/xorg-macros.m4.in
@@ -1492,7 +1492,7 @@ m4_foreach([flag], m4_cdr($@), [
 		CFLAGS="$CFLAGS ]flag["
 
 		AC_MSG_CHECKING([if $CC supports ]flag[])
-		AC_COMPILE_IFELSE([AC_LANG_SOURCE([int i;])],
+		AC_LINK_IFELSE([AC_LANG_PROGRAM([int i;])],
 		                  [supported=yes], [supported=no])
 		AC_MSG_RESULT([$supported])
 		CFLAGS="$xorg_testset_save_CFLAGS"
